--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,34 @@
   text-align: center;
 }
 
+button {
+  color: white;
+  border: none;
+  background-color: rgb(105, 184, 184);
+  border-radius: 12px;
+  padding: 10px;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 700;
+}
+
+h4 {
+  font-weight: 9000;
+}
+
 .logo {
   position: absolute;
   margin: 0;
-  top: 15px;
+  top: 7px;
   left: 25px;
+  color: white;
+  text-shadow: 5px 5px 0px rgba(0,0,0,0.2);
 }
 .wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 25px;
+  margin-top: 35px;
 }
 
 .halve {
@@ -38,6 +54,23 @@ input {
   margin: 10px;
   padding: 10px;
   border-radius: 5px;
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid rgb(105, 184, 184);
   width: 250px;
+  font-family: 'Orbitron', sans-serif;
+}
+
+@media (max-width: 800px) {
+  .wrapper {
+    margin-top: 50px;
+  }
+  .halve {
+    flex-direction: column;
+  }
+  .logo {
+    text-align: center;
+  }
+
+  .container {
+    min-height: 250px;
+  }
 }
